; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_expr.c_is_signed_integer_type.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_expr.c_is_signed_integer_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @is_signed_integer_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_signed_integer_type(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @type_get_type(i32* %4)
  switch i32 %5, label %21 [
    i32 128, label %6
    i32 144, label %8
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @FALSE, align 4
  store i32 %7, i32* %2, align 4
  br label %23

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @type_basic_get_type(i32* %9)
  switch i32 %10, label %20 [
    i32 131, label %11
    i32 135, label %11
    i32 134, label %11
    i32 132, label %11
    i32 136, label %11
    i32 133, label %11
    i32 130, label %11
    i32 142, label %16
    i32 137, label %18
    i32 143, label %18
    i32 129, label %18
    i32 140, label %18
    i32 139, label %18
    i32 141, label %18
    i32 138, label %18
  ]

11:                                               ; preds = %8, %8, %8, %8, %8, %8, %8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @type_basic_get_sign(i32* %12)
  %14 = icmp slt i32 %13, 0
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %2, align 4
  br label %23

16:                                               ; preds = %8
  %17 = load i32, i32* @TRUE, align 4
  store i32 %17, i32* %2, align 4
  br label %23

18:                                               ; preds = %8, %8, %8, %8, %8, %8, %8
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %2, align 4
  br label %23

20:                                               ; preds = %8
  br label %21

21:                                               ; preds = %1, %20
  %22 = load i32, i32* @FALSE, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %18, %16, %11, %6
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @type_get_type(i32*) #1

declare dso_local i32 @type_basic_get_type(i32*) #1

declare dso_local i32 @type_basic_get_sign(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
